<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Voyce</string>
    <string name="title_feed">Posts</string>
    <string name="title_search">Buscar</string>
    <string name="title_profile">Perfil</string>
    <string name="title_musician">Músico</string>
    <string name="following">Seguindo</string>
    <string name="biography">Biografia</string>
    <string name="followers">Seguidores</string>
    <string name="listeners">Ouvintes</string>
    <string name="sponsors">Patrocinadores</string>
    <string name="follow">Seguir</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="verify_connection">Verifique sua conexão e tente novamente</string>
    <string name="info_tab">Info</string>
    <string name="proposal_tab">Planos</string>
    <string name="monthly_income">Por mês</string>
    <string name="monthly_income_value">R$ <xliff:g id="monthly_income_value">%s</xliff:g></string>
    <string name="user_goal_value">R$ <xliff:g id="user_goal_value">%s</xliff:g></string>
    <string name="proposal_price">R$ <xliff:g id="proposal_price">%s</xliff:g></string>
    <string name="user_location"><xliff:g id="city">%s</xliff:g>, <xliff:g id="state">%s</xliff:g></string>
    <string name="user_goal">Valor da Meta Atual: R$<xliff:g id="current_value">%s</xliff:g>  de R$<xliff:g id="goal_value">%s</xliff:g></string>
    <string name="settings">Configurações</string>
    <string name="playlists">Playlists</string>
    <string name="sponsoring">Patrocinando</string>
    <string name="phone_icon">phone icon</string>
    <string name="instagram_icon">instagram icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="all_musicians">Todos os Músicos</string>
    <string name="not_following_text">Você ainda não segue seus artistas favoritos</string>
    <string name="create_plan_advice">Crie seus planos no nosso site</string>
    <string name="create_goal_advice">Crie uma meta no nosso site</string>
    <string name="logout_button">Logout button</string>
    <string name="profile_photo_background">profile photo background</string>
    <string name="back_button">back button</string>
    <string name="musician_image">musician image</string>
    <string name="proposal_image">proposaL_image</string>
    <string name="dollar_icon">dollar icon</string>
    <string name="main_in_region">Principais na Região</string>
    <string name="city_highlight">Destaques da sua cidade</string>
    <string name="results">Resultados</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Próximo</string>
    <string name="password_hint">Digite uma senha</string>
    <string name="email_hint">E-mail</string>
    <string name="full_name_hint">Nome Completo</string>
    <string name="register_label">Cadastro</string>
    <string name="gender_others">Outros</string>
    <string name="gender_female">Feminino</string>
    <string name="gender_male">Masculino</string>
    <string name="date_of_birth_hint">Data de Nascimento</string>
    <string name="state_hint">Estado</string>
    <string name="city_hint">Selecione a sua Cidade</string>
    <string name="enter">Entrar</string>
    <string name="gender_question">Qual é o seu gênero?</string>
    <string name="sign_up_register">Cadastre-se</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="password_login_hint">Digite sua senha</string>
    <string name="emai_login_hint">Digite seu e-mail</string>
    <string name="password_min_hint">mínimo de 8 caracteres</string>
    <string name="password_icon_description">password visibility icon</string>
    <string name="search_icon_description">search icon</string>
    <string name="voyce_create_musician_profile_hint">Tenha um perfil de músico no Voyce acessando nosso site!</string>
    <string name="exit">Sair</string>
    <string name="sponsor_artist">Patrocinar</string>
    <string name="no_sponsoring_text">Você ainda não assina os planos dos seus artistas favoritos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_post">Nova Publicação</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="create_new_post">Criar Publicação</string>
    <string name="publish">PUBLICAR</string>
    <string name="no_feed_text">Nenhuma publicação disponível. Siga seus artistas favoritos para ver suas últimas publicações</string>
    <string name="type_post_text_hint">Digite o texto da sua publicação</string>
    <string name="cancel_plan">Cancelar Plano</string>
    <string name="all_plans">Todos os Planos</string>
    <string name="query_text_hint">Artistas, Cidade ou Estado</string>
    <string name="no_search_results">Nenhum resultado encontrado</string>
    <string name="news">Novidades</string>
    <string name="profile_image">Foto do Perfil</string>
    <string name="profile_edit">Editar Perfil</string>
    <string name="save">Salvar</string>
    <string name="posts">Publicações</string>
</resources>
