<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryVeryDark"
    android:orientation="vertical"
    tools:context=".ui.userprofile.UserProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/musician"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/followers_circle"
            android:layout_width="203dp"
            android:layout_height="200dp"
            android:layout_marginBottom="96dp"
            android:src="@drawable/followers"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_profile_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/following"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/followers_circle"
            app:layout_constraintEnd_toEndOf="@+id/followers_circle"
            app:layout_constraintStart_toStartOf="@+id/followers_circle" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/sponsoring_circle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="84dp"
            android:src="@drawable/sponsoring"
            app:layout_constraintBottom_toTopOf="@+id/user_profile_image"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/sponsoring"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/sponsoring_circle"
            app:layout_constraintEnd_toEndOf="@+id/sponsoring_circle"
            app:layout_constraintStart_toStartOf="@+id/sponsoring_circle" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/playlists_circle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="76dp"
            android:src="@drawable/playlists"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/playlists"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/playlists_circle"
            app:layout_constraintEnd_toEndOf="@+id/playlists_circle"
            app:layout_constraintStart_toStartOf="@+id/playlists_circle" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_circle"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="124dp"
            android:src="@drawable/settings"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/settings_circle"
            app:layout_constraintEnd_toEndOf="@+id/settings_circle"
            app:layout_constraintStart_toStartOf="@+id/settings_circle" />

    </android.support.constraint.ConstraintLayout>

</HorizontalScrollView>